protonvpn-cli (3.8.0-2) unstable; urgency=medium

  * Fix: When adding custom DNS IP it will no longer automatically set "automatic DNS" 
  * Fix: Add VPN Accelerator setting 
  
 -- Proton Technologies AG <opensource@proton.me>  Fri, 16 Jun 2021 15:15:00 +0100
 
protonvpn-cli (3.7.2-2) unstable; urgency=medium

  * Fix: Update README.md and create USAGE.md
  
 -- Proton Technologies AG <opensource@proton.me>  Mon, 28 Jun 2021 12:30:00 +0100
 
protonvpn-cli (3.7.1-1) unstable; urgency=medium

  * Hotfix: Display force disable connectivity check message in case of failure
  
 -- Proton Technologies AG <opensource@proton.me>  Tue, 22 Jun 2021 17:45:00 +0100
 
protonvpn-cli (3.7.0-3) unstable; urgency=medium

  * Feature: Generate and provide easy access to logs
  
 -- Proton Technologies AG <opensource@proton.me>  Fri, 18 June 2021 14:45:00 +0100

protonvpn-cli (3.6.0-5) unstable; urgency=medium

  * Update to latest library version (3.2.0 =< and < 3.3.0)
  
 -- Proton Technologies AG <opensource@proton.me>  Fri, 21 May 2021 13:00:00 +0100

protonvpn-cli (3.5.3-2) unstable; urgency=medium

  * Bugfix: fixed crash when trying to display netshield help
  
 -- Proton Technologies AG <opensource@proton.me>  Thu, 20 May 2021 09:00:00 +0100

protonvpn-cli (3.5.2-2) unstable; urgency=medium

  * Bugfix: fixed crash when trying to display netshield status
  
 -- Proton Technologies AG <opensource@proton.me>  Wed, 19 May 2021 11:00:00 +0100
 
protonvpn-cli (3.5.1-1) unstable; urgency=low

  * Update dependency (protonvpn-nm-lib) version
  
 -- Proton Technologies AG <opensource@proton.me>  Fri, 30 Apr 2021 19:15:00 +0100

protonvpn-cli (3.5.0-2) unstable; urgency=low

  * Handle servers with multiple features
  * Fix server feature issue when displaying connection status

 -- Proton Technologies AG <opensource@proton.me>  Tue, 30 Mar 2021 12:20:00 +0100
 
protonvpn-cli (3.4.1-4) unstable; urgency=low

  * Fix dialog crash